Expanding window with mobile menu open no longer breaks the content

--- a/wp-content/themes/mspflymag/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/mspflymag/assets/scss/modules/_navigation.scss
@@ -1,6 +1,10 @@
 //no scroll here for now
 .no-scroll {
   overflow: hidden;
+  
+  @include breakpoint(tablet) {
+    overflow: auto;
+  }
 }
 
 .menu-item {
